--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span>$499</span>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Laptop">
+        <img src="https://th.bing.com/th/id/OIP.ODEfmacJl3MTPNBzQa_80wHaE7?rs=1&pid=ImgDetMain/150" alt="Laptop">
         <h3>Laptop Pro 14"</h3>
         <p>Ultimate performance for work and play.</p>
         <span>$999</span>
@@ -49,7 +49,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: support@electromart.com</p>
+    <p>Email: jamesdutmathok@gmail.com</p>
     <p>Follow us on <a href="#">Twitter</a> and <a href="#">Instagram</a></p>
   </section>
 
