--- a/index.html
+++ b/index.html
@@ -1,60 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ElectroMart - Electronics Store</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>ElectroMart</h1>
-    <p>Your one-stop shop for the latest gadgets</p>
-  </header>
-
-  <nav>
-    <a href="#products">Products</a>
-    <a href="#about">About Us</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="products">
-    <h2>Featured Products</h2>
-    <div class="product-grid">
-      <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Smartphone">
-        <h3>Smartphone X1</h3>
-        <p>Powerful, sleek and affordable.</p>
-        <span>$499</span>
-      </div>
-      <div class="product">
-        <img src="https://th.bing.com/th/id/OIP.ODEfmacJl3MTPNBzQa_80wHaE7?rs=1&pid=ImgDetMain/150" alt="Laptop">
-        <h3>Laptop Pro 14"</h3>
-        <p>Ultimate performance for work and play.</p>
-        <span>$999</span>
-      </div>
-      <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Headphones">
-        <h3>Wireless Headphones</h3>
-        <p>Noise-canceling and long battery life.</p>
-        <span>$199</span>
-      </div>
+<section id="products">
+  <h2>Featured Products</h2>
+  <div class="product-grid">
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?fit=crop&w=300&q=80" alt="Smartphone">
+      <h3>Smartphone X1</h3>
+      <p>Powerful, sleek and affordable.</p>
+      <span>$499</span>
     </div>
-  </section>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>ElectroMart is a small startup passionate about technology. We offer the best prices on the latest electronic gadgets. Shipping worldwide!</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: jamesdutmathok@gmail.com</p>
-    <p>Follow us on <a href="#">Twitter</a> and <a href="#">Instagram</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 ElectroMart. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?fit=crop&w=300&q=80" alt="Laptop">
+      <h3>Laptop Pro 14"</h3>
+      <p>Ultimate performance for work and play.</p>
+      <span>$999</span>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1580894732444-31bbee46c9e6?fit=crop&w=300&q=80" alt="Headphones">
+      <h3>Wireless Headphones</h3>
+      <p>Noise-canceling and long battery life.</p>
+      <span>$199</span>
+    </div>
+  </div>
+</section>
