--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <h2>Featured Products</h2>
   <div class="product-grid">
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?fit=crop&w=300&q=80" alt="Smartphone">
+      <img src="https://www.bing.com/images/search?q=smartphone+x1&id=F723B2A77820572627CCD96D09EF99DEF82C6AFC&FORM=IQFRBA">
       <h3>Smartphone X1</h3>
       <p>Powerful, sleek and affordable.</p>
       <span>$499</span>
