--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <h2>Featured Products</h2>
   <div class="product-grid">
     <div class="product">
-      <img src="https://www.bing.com/images/search?q=smartphone+x1&id=F723B2A77820572627CCD96D09EF99DEF82C6AFC&FORM=IQFRBA">
+      <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?fit=crop&w=300&q=80" alt="Smartphone X1">
       <h3>Smartphone X1</h3>
       <p>Powerful, sleek and affordable.</p>
       <span>$499</span>
@@ -14,7 +14,7 @@
       <span>$999</span>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1580894732444-31bbee46c9e6?fit=crop&w=300&q=80" alt="Headphones">
+      <img src="https://images.unsplash.com/photo-1580894732444-31bbee46c9e6?fit=crop&w=300&q=80" alt="Wireless Headphones">
       <h3>Wireless Headphones</h3>
       <p>Noise-canceling and long battery life.</p>
       <span>$199</span>
