--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Powered Resume Analyzer</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -42,9 +41,21 @@
 
     <section id="comment">
         <h2>Comments</h2>
-        <textarea placeholder="Leave your comment here..."></textarea>
-        <button onclick="submitComment()">Submit</button>
-        <div id="comments-section"></div>
+        <form id="commentForm" method="POST" action="submit_comment.php">
+            <textarea name="comment" placeholder="Leave your comment here..." required></textarea>
+            <button type="submit">Submit</button>
+        </form>
+        <div id="comments-section">
+            <h3>Previous Comments</h3>
+            <?php
+                $comments = @file_get_contents("comments.txt");
+                if ($comments) {
+                    echo nl2br(htmlspecialchars($comments));
+                } else {
+                    echo "<p>No comments yet.</p>";
+                }
+            ?>
+        </div>
     </section>
 
     <section id="follow">
@@ -81,77 +92,3 @@
     </footer>
 </body>
 </html>
-
-<!-- styles.css -->
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f4f4f4;
-    }
-    header {
-        background: #2c3e50;
-        color: white;
-        padding: 1rem 2rem;
-    }
-    nav ul {
-        list-style: none;
-        display: flex;
-        gap: 1rem;
-    }
-    nav ul li a {
-        color: white;
-        text-decoration: none;
-    }
-    section {
-        padding: 2rem;
-        background: white;
-        margin: 1rem auto;
-        max-width: 900px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    textarea {
-        width: 100%;
-        height: 100px;
-        margin-top: 1rem;
-    }
-    button {
-        padding: 0.5rem 1rem;
-        margin-top: 0.5rem;
-    }
-    .social-icons a {
-        margin-right: 1rem;
-        text-decoration: none;
-        color: #3498db;
-    }
-    .video-container {
-        text-align: center;
-    }
-    iframe {
-        max-width: 100%;
-    }
-    footer {
-        text-align: center;
-        padding: 2rem;
-        background: #34495e;
-        color: white;
-    }
-</style>
-
-<!-- script.js -->
-<script>
-    function submitComment() {
-        const commentBox = document.querySelector('textarea');
-        const comment = commentBox.value.trim();
-        const commentsSection = document.getElementById('comments-section');
-
-        if (comment) {
-            const p = document.createElement('p');
-            p.textContent = comment;
-            commentsSection.appendChild(p);
-            commentBox.value = '';
-        }
-    }
-</script>
